# app.js
@@ -14,13 +14,13 @@ const swaggerDocument = require('./swagger-output.json');
 
 dotenv.config({ path: './config.env' });
 const DB = process.env.DATABASE.replace(
-    '<password>',
-    process.env.DATABASE_PASSWORD
-  );
+  '<password>',
+  process.env.DATABASE_PASSWORD
+);
 
 mongoose
-.connect(DB)
-.then(() => console.log('資料庫連接成功'));
+  .connect(DB)
+  .then(() => console.log('資料庫連接成功'));
 app.use(cors())
 app.use(logger('dev'));
 app.use(express.json());
@@ -28,8 +28,8 @@ app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, 'public')));
 
-app.use('/', indexRouter);
-app.use('/posts', postRouter);
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/api/', indexRouter);
+app.use('/api/posts', postRouter);
+app.use('/api/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 module.exports = app;
